# veloxide

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  action-item-1-beads.json  moon.yml
.beads/: config.yaml  metadata.json
.moon/: tasks.yml  toolchain.yml  toolchains.yml  workspace.yml
beads/: activity-actor.json  activity-registry.json  api-client.json  axum-handlers.json  cli-commands.json  common-types.json  consolidated.json  context-trait.json  dag-graph.json  epics.json  error-taxonomy.json  frontend-graph.json  frontend-ui.json  journal-types.json  master-orchestrator.json  replay-executor.json  route-defs.json  sled-init.json  sled-instances.json  sled-journal.json  sled-signals.json  sled-timers.json  supervision-tree.json  timer-task.json  worker-loop.json  workflow-instance.json
crates/vo-api/: Cargo.toml  moon.yml
crates/vo-api/src/handlers/: events.rs  mod.rs  workflow.rs
crates/vo-api/src/types/: mod.rs  tests.rs  v1.rs
crates/vo-ipc/: Cargo.toml  moon.yml
crates/vo-ipc/src/: config.rs  envelope.rs  error.rs  fd3.rs  fd4.rs  lib.rs  run.rs  spawn.rs  stderr.rs  timeout.rs  unit_tests.rs
crates/vo-ipc/tests/: cargo_toml_contract.rs  cargo_toml_deps_contract.rs  code_quality.rs  integration_tests.rs  proptest_tests.rs  scaffold_integration.rs  workspace_integration.rs
crates/vo-types/: Cargo.toml  moon.yml
crates/vo-types/proptest-regressions/: non_empty_vec.txt  workflow.txt
crates/vo-types/src/: adversarial_tests.rs  errors.rs  events.rs  integer_types.rs  lib.rs  non_empty_vec.rs  red_queen_tests.rs  serde_tests.rs  state.rs  string_types.rs  types.rs  workflow_tests.rs
crates/vo-types/src/workflow/: mod.rs  types.rs
crates/vo-types/tests/: scaffold_compliance.rs
crates/vo-types/wtf-types/: moon.yml
crates/vo-types/wtf-types/proptest-regressions/: types.txt
crates/vo-types/wtf-types/src/: cross_cutting_tests.rs  red_queen_tests.rs  state.rs
crates/vo-types/wtf-types/tests/: scaffold_compliance.rs
crates/wtf-actor/: Cargo.toml
crates/wtf-actor/src/: activity.rs  fsm.rs  fsm.rs.new  heartbeat.rs  instance.rs  lib.rs  master.rs  messages.rs  procedural.rs  snapshot.rs
crates/wtf-actor/src/dag/: apply.rs  mod.rs  state.rs  tests.rs
crates/wtf-actor/src/fsm/: definition.rs  handlers.rs  state.rs  tests.rs  types.rs
crates/wtf-actor/src/instance/: actor.rs  handlers.rs  handlers_tests.rs  init.rs  init_red_queen_tests.rs  lifecycle.rs  mod.rs  procedural.rs  procedural_tests.rs  procedural_utils.rs  state.rs
crates/wtf-actor/src/master/: mod.rs  registry.rs  state.rs
crates/wtf-actor/src/master/handlers/: heartbeat.rs  list.rs  mod.rs  signal.rs  start.rs  status.rs  terminate.rs
crates/wtf-actor/src/messages/: errors.rs  instance.rs  mod.rs  orchestrator.rs
crates/wtf-actor/src/procedural/: context.rs
crates/wtf-actor/src/procedural/state/: mod.rs  tests.rs
crates/wtf-actor/tests/: capacity_check_tests.rs  fsm_crash_replay.rs  inject_event_paradigm_state.rs  now_publish_failure.rs  procedural_ctx_start_at_zero.rs  procedural_now_op_id.rs  sleep_timer_id_determinism.rs  timer_sleep_checkpoint.rs
crates/wtf-api/: Cargo.toml
crates/wtf-api/src/: app.rs  lib.rs  routes.rs  sse.rs  types.rs
crates/wtf-api/src/handlers/: definitions.rs  events.rs  helpers.rs  journal.rs  mod.rs  signal.rs  validate.rs  workflow.rs
crates/wtf-api/src/handlers/workflow/: get.rs  list.rs  mod.rs  start.rs  terminate.rs
crates/wtf-api/src/types/: errors.rs  helpers.rs  mod.rs  names.rs  newtypes.rs  requests.rs  responses.rs  tests.rs  v3.rs
crates/wtf-api/tests/: e2e_workflow_completion.rs  journal_test.rs  validate_workflow_test.rs
crates/wtf-api/tests/unit/: signal_handler_test.rs
crates/wtf-cli/: Cargo.toml
crates/wtf-cli/src/: lib.rs  lint.rs  main.rs
crates/wtf-cli/src/commands/: admin.rs  serve.rs  serve_tests.rs
crates/wtf-common/: Cargo.toml
crates/wtf-common/src/: events.rs  lib.rs  storage.rs  types.rs
crates/wtf-common/src/events/: mod.rs  tests.rs  types.rs
crates/wtf-common/src/types/: error.rs  id.rs  mod.rs  workflow.rs
crates/wtf-core/: Cargo.toml
crates/wtf-core/src/: context.rs  dag.rs  errors.rs  journal.rs  lib.rs  types.rs
crates/wtf-engine/: Cargo.toml
crates/wtf-engine/proptest-regressions/: lib.txt
crates/wtf-engine/src/: error.rs  helpers.rs  lib.rs  registry.rs  tests.rs  types.rs
crates/wtf-engine/tests/: adversarial.rs  e2e.rs  integration.rs
crates/wtf-engine/tests/common/: mod.rs
crates/wtf-frontend/: Cargo.toml
crates/wtf-frontend/src/: lib.rs
crates/wtf-frontend/src/graph/: mod.rs  validation.rs
crates/wtf-frontend/src/ui/: app_io.rs  canvas_context_menu.rs  execution_history_panel.rs  execution_plan_panel.rs  inspector_panel.rs  mod.rs  monitor_mode.rs  panel_types.rs  payload_preview_panel.rs  prototype_palette.rs  selected_node_panel.rs  simulate_mode.rs  time_travel.rs
crates/wtf-frontend/src/ui/config_panel/: execution.rs
crates/wtf-frontend/src/ui/icons/: registry.rs
crates/wtf-frontend/src/ui/monitor_mode/: calc.rs  data.rs
crates/wtf-frontend/src/wtf_client/: watch.rs
crates/wtf-linter/: Cargo.toml
crates/wtf-linter/src/: diagnostic.rs  engine.rs  l001_time.rs  l003_direct_io.rs  l004.rs  l005.rs  l006.rs  lib.rs  rules.rs  visitor.rs
crates/wtf-linter/src/.beads/wtf-7yk2/: contract.md
crates/wtf-linter/tests/: integration_test.rs  l001_time.rs  l002_random_test.rs  l004_test.rs  l005_test.rs  l006_test.rs
crates/wtf-storage/: Cargo.toml
crates/wtf-storage/src/: db.rs  instances.rs  journal.rs  kv.rs  lib.rs  replay.rs  signals.rs  timers.rs
crates/wtf-storage/tests/: fjall_integration.rs  foundation_integration_tests.rs  structural_test.rs
crates/wtf-worker/: Cargo.toml
crates/wtf-worker/src/: activity.rs  lib.rs  queue.rs  worker.rs
crates/wtf-worker/src/activity/: mod.rs  reporting.rs  retry.rs  sender.rs  tests.rs
crates/wtf-worker/src/timer/: loop.rs  mod.rs  ops.rs  record.rs  tests.rs
crates/wtf-worker/tests/: worker_integration_tests.rs
docs/: VISION_AND_ARCHITECTURE.md
mutants.out/: lock.json  (+2 more)
(+417 files in other folders)
