[workspace]
resolver = "2"
members = [
    "crates/vo-types",
    "crates/vo-storage",
    "crates/vo-api",
    "crates/vo-cli",
    "crates/vo-worker",
    "crates/vo-frontend",
    "crates/vo-linter",
    "crates/vo-actor",
    "crates/vo-core",
    "crates/vo-common",
    "crates/vo-ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Actor framework
ractor = "0.15"

# Graph
petgraph = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
serde_yaml = "0.9"

# Web framework
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
async-nats = "0.33.0"
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1"
fjall = "2.0"
vo-types = { path = "crates/vo-types" }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
regex = "1"
lazy_static = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tap = "1"
itertools = "0.14"
futures-lite = "2"
bytes = { version = "1", features = ["serde"] }
tempfile = "3"
crc32fast = "1.3"

# Static analysis (vo-linter)
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"

# UI (Dioxus)
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-router = "0.7"

# Error handling
nom = "7"
strum = { version = "0.24", features = ["derive"] }

# Testing
rstest = "0.18"
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
