[package]
name = "vo-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
libc = "0.2"

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
toml = "0.8"
tempfile.workspace = true

[[bin]]
name = "fixture_driver"
path = "tests/fixtures/src/bin/fixture_driver.rs"
