[package]
name = "vo-types"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
ulid.workspace = true
uuid.workspace = true
serde_json.workspace = true

[dev-dependencies]
rstest.workspace = true
proptest = "1"
serde_json.workspace = true
