[package]
name = "wtf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wtf-common = { path = "../wtf-common" }
wtf-core = { path = "../wtf-core" }
wtf-storage = { path = "../wtf-storage" }
wtf-actor = { path = "../wtf-actor" }
wtf-worker = { path = "../wtf-worker" }
wtf-linter = { path = "../wtf-linter" }

# CLI
clap = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = "0.17"
futures-util = { workspace = true }
async-nats = { workspace = true }
rmp-serde = { workspace = true }
bytes = { workspace = true }
