[package]
name = "wtf-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization — msgpack for JetStream payloads, json for debugging
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

# Byte buffers
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# ID generation
ulid = { workspace = true }

# Traits
async-trait = { workspace = true }
