[package]
name = "wtf-engine"
version.workspace = true
edition.workspace = true

[dependencies]
wtf-types = { path = "../wtf-types" }
dashmap.workspace = true
sha2.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
proptest.workspace = true
ulid.workspace = true
