[package]
name = "wtf-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Dioxus
dioxus = { workspace = true }
dioxus-router = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }

# Async
futures = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
tokio = { workspace = true }
