[package]
name = "wtf-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
fjall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wtf-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
thiserror = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
