[package]
name = "wtf-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wtf-common = { path = "../wtf-common" }
wtf-core = { path = "../wtf-core" }
wtf-storage = { path = "../wtf-storage" }
wtf-actor = { path = "../wtf-actor" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
